Fixed bug #42167 (fgetcsv gives different output on php6 compared to php5), #42219 (length argument of fgetcsv() is not effective/working in PHP6)